[package]
name = "p2pro-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dioxus = { version = "0.7", features = ["desktop"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", default-features = false, features = ["time"] }
v4l = "0.14"
