[package]
name = "p2pro-rs"
version = "1.0.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
authors = [ "Michael Büsch <m@bues.ch>" ]
homepage = "https://bues.ch/"
repository = "https://github.com/mbuesch/p2pro-rs"
readme = "README.md"
categories = [ "graphics", "hardware-support", "science" ]
keywords = [ "infiray", "p2pro", "thermal", "camera" ]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = [ "derive" ] }
dioxus = { version = "0.7", features = [ "desktop" ] }
image = { version = "0.25", default-features = false, features = [ "png" ] }
movavg = "2"
tokio = { version = "1", default-features = false, features = [ "sync", "rt-multi-thread" ] }
v4l = "0.14"

[profile.dev]
debug = "limited"
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
